# py_rag_sync

.github/workflows/: sync.yml
python/: config.py  pipeline.py  pyproject.toml
sync/: Dockerfile  chunker.py  embedder.py  sync.py
sync/readers/: gitlab.py  google_drive.py  redmine.py  trello.py
